--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,16 @@
 <resources>
     <string name="app_name">Swoosh</string>
+    <string name="background_image">background image</string>
+    <string name="app_logp">app logp</string>
+    <string name="Mens">Mens</string>
+    <string name="womens">Womens</string>
+    <string name="co_ed">Co-Ed</string>
+    <string name="desired_league">Desired League</string>
+    <string name="next">Next</string>
+    <string name="background">background</string>
+    <string name="go_all_in">GO ALL IN</string>
+    <string name="find_a_team_in_your_city_and_dominate_the_league">Find a team in your city, and dominate the league.
+    </string>
+    <string name="on_going_all_out">ON GOING ALL OUT</string>
+    <string name="get_started">GET STARTED</string>
 </resources>
